--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,19 @@
+<script
+ src="https://code.jquery.com/jquery-2.2.4.js"integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+crossorigin="anonymous"></script>
+<!-- <script type="text/javascript" src="/meal-engine/app.js" > </script> -->
+<script type="text/javascript" src="/Users/ashley/Desktop/techtonica-labs/meal-engine" > </script>
+<!-- jquery  -->
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+
+<script>
+$(document).ready(function () {
+  $('.Recipe-Image-Button-Wrapper').on('click', function(){
+    $('#Modal-Window').show();
+  })
+})
+</script>
   </body>
+
 </html>
