--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>meal-engine</title>
-    <script
-    src="http://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-  <script src="/js/main.js" type="text/javascript"></script>
+    <!-- BootStrap Link -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- CSS Link -->
+        <link rel="stylesheet" href="/css/main.css">
+    <!-- JS Connection to main js -->
+      <script src="/js/main.js" type="text/javascript"></script>
 
   </head>
   <body>
