--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="/css/main.css">
     <!-- JS Connection to main js -->
       <script src="/js/main.js" type="text/javascript"></script>
+      <script src="/js/logoRanGen.js" type="text/javascript">
+
+      </script>
 
   </head>
-  
