--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,11 +28,10 @@
     <div class="col-xs-6 col-md-4">
     <!-- Random Button  -->
       <span name="imageForm">
-        <img src="https://emojipedia-us.s3.amazonaws.com/thumbs/160/facebook/65/fork-and-knife_1f374.png" onclick = "displayImage()" width= "50" value="Display Random Image" > </img></span>
+        <img src="https://emojipedia-us.s3.amazonaws.com/thumbs/160/facebook/65/fork-and-knife_1f374.png" onclick = "displayImage()" width= "50" value="Display Random Image"></span>
     </div>
 
     <div class="col-xs-12 col-sm-6 col-md-8">
-
       <h1>What should you eat today?</h1>
         <div id="test"> </div>
 
