--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,6 @@
           <li><a href="https://avatars0.githubusercontent.com/u/22802127?s=460&v=4">Stephanie</a></li>
           <li><a href="https://avatars0.githubusercontent.com/u/16006190?s=460&v=4">Lian</a></li>
         </ul>
-            </li>
-          </ul>
        </li>
      </ul>
    </div>
@@ -28,14 +26,15 @@
     <div class="col-xs-6 col-md-4">
     <!-- Random Button  -->
       <span name="imageForm">
-        <img src="https://emojipedia-us.s3.amazonaws.com/thumbs/160/facebook/65/fork-and-knife_1f374.png" onclick = "displayImage()" width= "50" value="Display Random Image"></span>
+        <img src="/img/fork-and-knife_1f374.png" onclick = "displayImage()" width= "50" value="Display Random Image"></span>
     </div>
 
-    <div class="col-xs-12 col-sm-6 col-md-8">
-      <h1>What should you eat today?</h1>
-        <div id="test"> </div>
-
-    </div>
+    <% if (random) { %>
+        <div class="col-xs-12 col-sm-6 col-md-8">
+          <h1>What should you eat today?</h1>
+          <div><a href="<%= random.link_name %>"><%= random.recipe_name %></a></div>
+        </div>
+    <% } %>
   </div>
 
   <div class="row bottomBox">
